2005-11-07  Neil Williams <linux@codehelp.co.uk>

	* src/engine/gnc-budget.c : Remove unnecessary
	private headers.

2005-11-07  Neil Williams <linux@codehelp.co.uk>

	* Makefile.am : remove distcleancheck1.5-is-stupid
	workaround.

2005-11-06  David Hampton  <hampton@employees.org>

	* src/import-export/hbci/gnc-plugin-hbci.c:
	* src/report/stylesheets/gnc-plugin-stylesheets.c:
	* src/gnome-utils/gnc-plugin-page.[ch]: Change function name to
	disambiguate between retrieving the name of a page and the name of
	the plugin that provides the page.

2005-11-06  Neil Williams <linux@codehelp.co.uk>

	* src/engine/Makefile.am : qofla-dir.h is not
	for distribution, qofla-dir.h.in is used instead.

2005-11-06  Christian Stimming  <stimming@tuhh.de>

	* autogen.sh: Revert autogen.sh simplificatoin for now; to be
	reconsidered after more testing.

2005-11-06  Neil Williams <linux@codehelp.co.uk>

	* doc/build-osx.txt : Document some OSX-specific 
	build solutions

2005-11-06  Neil Williams <linux@codehelp.co.uk>

	* doc/RAW-NOTES : deleted
	* doc/misc-notes.txt : new version, compatible
	with doxygen.
	* doc/Makefile.am : use GNU sed to allow OSX build
	of tip of the day.
	* doc/README.build-system : Document changes in autogen.sh
	* configure.in : Allow make to use the already detected
	usable version of sed. Remove OSX hacks that are no
	longer required.

2005-11-05  David Hampton  <hampton@employees.org>

	* configure.in:
	* src/register/register-core/Makefile.am:
	* src/core-utils/Makefile.am:
	* src/gnc-module/test/mod-bar/Makefile.am:
	* src/gnc-module/test/mod-baz/Makefile.am:
	* src/gnc-module/test/mod-foo/Makefile.am:
	* src/gnc-module/Makefile.am:
	* src/report/report-gnome/Makefile.am:
	* src/business/business-core/Makefile.am:
	* src/business/business-gnome/Makefile.am:
	* src/business/dialog-tax-table/Makefile.am:
	* src/gnome-utils/Makefile.am:
	* src/engine/Makefile.am:
	* src/gnome/Makefile.am: