@@ -417,11 +417,13 @@ else
 fi
 if test x$QOF_XML_DIR = x; then
         AC_MSG_RESULT([no, will use internal QOF code])
-	QOF_CFLAGS="-I\${top_srcdir}/src/engine"
-	QOF_LIBS="\${top_srcdir}/src/engine/libqof.la"
-	QOF_LIB_DIR="${libdir}"
+  	QOF_LIB_DIR=`eval echo $libdir | sed "s%^NONE%$prefix%"`
+	QOF_LIB_DIR=`eval echo $QOF_LIB_DIR | sed "s%^NONE%$prefix%"`
+	QOF_CFLAGS="-I\${top_srcdir}/lib/libqof/qof"
+	QOF_LIBS="\${top_srcdir}/lib/libqof/qof/libqof.la"
+#	QOF_LIB_DIR=`eval echo ${libdir}`
 	QOF_PREFIX="internal"
-	QOF_XML_DIR="$QSF_SCHEMA_DIR"
+	QOF_XML_DIR=`eval echo ${datadir}/xml/qsf`
 	LIBQOF_LIBRARY_VERSION=1:1:0
 	LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:0:0
 	AC_SUBST(LIBQOF_LIBRARY_VERSION)
@@ -439,6 +441,7 @@ AC_SUBST(QOF_LIBS)
 AS_SCRUB_INCLUDE(QOF_PREFIX)
 AC_SUBST(QOF_PREFIX)
 AC_SUBST(QOF_LIB_DIR)
+AC_SUBST(QOF_XML_DIR)
 
 ### --------------------------------------------------------------------------
 ### for GOG/goffice...
@@ -547,7 +550,6 @@ fi
 
 GNC_ACCOUNTS_DIR='${GNC_SHAREDIR}/accounts'
 GNC_GLADE_DIR='${GNC_SHAREDIR}/glade'
-QSF_SCHEMA_DIR='${GNC_SHAREDIR}/xml/qsf'
 GNC_UI_DIR='${GNC_SHAREDIR}/ui'
 GNC_GWRAP_LIBDIR='${GNC_SHAREDIR}/guile-modules/g-wrapped'
 GNC_MODULE_DIR='${pkglibdir}'
@@ -557,7 +559,6 @@ AC_SUBST(GNC_ACCOUNTS_DIR)
 AC_SUBST(GNC_CONFIGDIR)
 AC_SUBST(GNC_DOC_INSTALL_DIR)
 AC_SUBST(GNC_GLADE_DIR)
-AC_SUBST(QSF_SCHEMA_DIR)
 AC_SUBST(GNC_UI_DIR)
 AC_SUBST(GNC_GWRAP_LIBDIR)
 AC_SUBST(GNC_INCLUDE_DIR)
@@ -1286,6 +1287,10 @@ AC_CONFIG_FILES(po/Makefile.in
           lib/goffice/pixmaps/Makefile
           lib/goffice/cut-n-paste/Makefile
           lib/goffice/cut-n-paste/pcre/Makefile
+          lib/libqof/Makefile
+          lib/libqof/qof/Makefile
+          lib/libqof/backend/Makefile
+          lib/libqof/backend/file/Makefile
           rpm/Makefile
           src/Makefile
           src/app-utils/Makefile
@@ -1296,7 +1301,6 @@ AC_CONFIG_FILES(po/Makefile.in
           src/backend/file/test/Makefile
           src/backend/file/test/test-files/Makefile
           src/backend/file/test/test-files/xml2/Makefile
-	  src/backend/qsf/Makefile
           src/backend/postgres/Makefile
           src/backend/postgres/test/Makefile
           src/backend/rpc/Makefile
