@@ -1,10 +1,5 @@
 
-if USE_LIBQOF
-SUBDIRS = qsf file ${SQL_DIR} ${RPC_DIR}
-DIST_SUBDIRS = qsf file net postgres rpc
-else
 SUBDIRS = file ${SQL_DIR} ${RPC_DIR}
-DIST_SUBDIRS = qsf file net postgres rpc
-endif
+DIST_SUBDIRS = file net postgres rpc
 
 noinst_HEADERS = gnc-backend-api.h
