@@ -12,103 +12,6 @@ AM_CFLAGS = \
 	${QOF_CFLAGS} \
 	${GNUCASH_ENGINE_CFLAGS}
 
-qof_library = \
-   gnc-date.c        \
-   gnc-engine-util.c \
-   gnc-numeric.c     \
-   gnc-event.c       \
-   gnc-trace.c       \
-   guid.c            \
-   kvp_frame.c       \
-   kvp-util.c        \
-   md5.c             \
-   qofbackend.c      \
-   qofclass.c        \
-   qofchoice.c       \
-   qofid.c           \
-   qofinstance.c     \
-   qofquery.c        \
-   qofbook.c         \
-   qofobject.c       \
-   qofquerycore.c    \
-   qofsession.c      \
-   qof_book_merge.c
-
-qof_headers =  \
-   gnc-date.h        \
-   gnc-engine-util.h \
-   gnc-numeric.h     \
-   gnc-event.h       \
-   gnc-trace.h       \
-   guid.h            \
-   kvp_frame.h       \
-   kvp-util.h        \
-   kvp-util-p.h      \
-   qof.h             \
-   qof-be-utils.h    \
-   qofbackend.h      \
-   qofbackend-p.h    \
-   qofclass.h        \
-   qofchoice.h       \
-   qofid.h           \
-   qofid-p.h         \
-   qofinstance-p.h   \
-   qofinstance.h     \
-   qofquery.h        \
-   qofbook.h         \
-   qofobject.h       \
-   qofquerycore.h    \
-   qofsession.h      \
-   qof_book_merge.h
-
-qof_noinst_headers = \
-   gnc-event-p.h \
-   md5.h  \
-   qofclass-p.h  \
-   qofmath128.h  \
-   qofquery-p.h  \
-   qofbook-p.h  \
-   qofobject-p.h  \
-   qofquerycore-p.h \
-   qofsession-p.h \
-   qofsql.h
-				 
-if USE_LIBQOF
-
-lib_LTLIBRARIES = libqof.la
-
-libqof_la_LDFLAGS= -version-info $(LIBQOF_LIBRARY_VERSION) 
-
-libqof_la_SOURCES =  ${qof_library}
-
-qofincludedir = ${pkgincludedir}
-
-qofinclude_HEADERS = ${qof_headers}
-
-nodist_qofinclude_HEADERS = qofla-dir.h
-
-QOFLIBdir = $(libdir)
-
-qofla-dir.h: qofla-dir.h.in
-	rm -f $@.tmp
-	sed < $< > $@.tmp \
-                -e 's:@-libdir-@:${QOFLIBdir}:g'
-	mv $@.tmp $@
-
-qof_builds = qofla-dir.h
-
-else
-
-libqof_la_SOURCES =
-
-qofincludedir = ${pkgincludedir}
-
-qofinclude_HEADERS = 
-
-qof_builds =
-
-endif
-
 libgncmod_engine_la_SOURCES = \
   Account.c \
   FreqSpec.c \
@@ -196,8 +99,7 @@ noinst_HEADERS = \
   gnc-pricedb-p.h \
   gw-engine.h \
   gw-kvp.h \
-  policy-p.h \
-  ${qof_noinst_headers}
+  policy-p.h
 
 noinst_SCRIPTS = iso-currencies-to-c
 
@@ -239,12 +141,9 @@ EXTRA_DIST = \
   extensions.txt \
   iso-4217-currencies.scm \
   iso-currencies-to-c \
-  qofla-dir.h.in \
   gncla-dir.h.in \
   kvp_doc.txt \
   SX-book-p.h \
-  ${qof_library} \
-  ${qof_headers} \
   ${gncmod_DATA} \
   ${gncscm_DATA} \
   ${gwmod_DATA}
@@ -288,13 +187,12 @@ gw-kvp.scm gw-kvp.c gw-kvp.h: \
 	 (gw:generate-wrapset \"gw-kvp\")"
 
 BUILT_SOURCES = \
-  ${qof_builds} \
   iso-4217-currencies.c \
   gw-engine.scm gw-engine.c gw-engine.h \
   gw-kvp.scm gw-kvp.c gw-kvp.h gncla-dir.h
 
 DISTCLEANFILES = gnucash g-wrapped .scm-links ${SCM_FILE_LINKS} \
-                 gw-engine.html gw-kvp.html qofla-dir.h gncla-dir.h
+                 gw-engine.html gw-kvp.html gncla-dir.h
 
 gncla-dir.h: gncla-dir.h.in
 	rm -f $@.tmp
